<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">Your File is downloaded</string>
    <string name="notification_button">Chick the Status</string>

    <string name="notification_channel_id">channelId</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="txvDownloadGlide">"Glide-Image Loading Library By Bump Tech "</string>
    <string name="txvLoadApp">LoadApp-Current Repository By Udacity</string>
    <string name="txvRetrofit">Retrofit - Type Safe HTTP Client For Android And Java By Square, Inc</string>
    <string name="channel_name">Downloading</string>
    <string name="txv_file_name">File Name</string>
    <string name="txv_status">Status</string>
    <string name="txv_result">Success</string>
</resources>
