<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_image_download"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf ="parent"
        android:src="@drawable/image_download"
        app:tint="@color/colorPrimary" />


    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/larg_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <RadioButton
            android:id="@+id/btnDowGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:textSize="@dimen/default_text_size"
            android:text="@string/txvDownloadGlide"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/btnLoadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:textSize="@dimen/default_text_size"
            android:text="@string/txvLoadApp"
            android:onClick="onRadioButtonClicked"/>


        <RadioButton
            android:id="@+id/btnRetrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/txvRetrofit"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="@dimen/loading_button_width"
        android:layout_height="@dimen/loading_button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:layout_margin="@dimen/loading_button_margin"
        app:backgroundColor="@color/colorPrimary"
        app:foregroundColor="@color/colorPrimaryDark"
        app:textColor1="@color/white"
        app:textDownload="@string/button_name"
        app:textLoading="@string/button_loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>


